Store the charset we had when we were written into when document.open()happens.  Then restore that as the document charset when loading from a wyciwygchannel, instead of just claiming to be UTF-16.  Bug 255820, r+sr=jst