content/html/document/src/nsHTMLDocument.h
@@ -297,6 +297,9 @@ protected:
   void StartAutodetection(nsIDocShell *aDocShell, nsACString& aCharset,
                           const char* aCommand);
 
+  // Override so we can munge the charset on our wyciwyg channel as needed.
+  virtual void SetDocumentCharacterSet(const nsACString& aCharSetID);
+
   // mWriteState tracks the status of this document if the document is being
   // entirely created by script. In the normal load case, mWriteState will be
   // eNotWriting. Once document.open has been called (either implicitly or
